# prairie-ros-sim

./: .gitignore  MUJOCO_LOG.TXT  README.md
src/bash_files/: gz_nemo4b.bash
src/gz_sim/: package.xml  setup.cfg  setup.py
src/gz_sim/config/: config_gzbridge.yaml  nemo3_robot_control.yaml
src/gz_sim/gz_sim/: gz_state_observer.py
src/gz_sim/helpers/: helpers.py
src/gz_sim/launch/: empty_gz.launch.py  empty_gz_g1.launch.py  empty_gz_nemo3.launch.py  empty_gz_nemo4b.launch.py  empty_gz_nemo6.launch.py  gz_only_nemo6.launch.py  test_static_gz_nemo4b.launch.py  walk_plane.launch.py
src/gz_sim/sdf/: walk_plane.sdf
src/gz_sim/urdf/: g1.urdf  nemo.urdf  nemo3.xacro.urdf  nemo4b.urdf
src/gz_sim_interfaces/: CMakeLists.txt  package.xml
src/gz_sim_interfaces/msg/: DrlObserve.msg  KeyboardCmd.msg  MasterState.msg  MotorCmd.msg  StateObservationReduced.msg
src/keyboard_teleop/: setup.cfg  setup.py
src/keyboard_teleop/keyboard_teleop/: prairie_cmd.py
src/motor_controller/: CMakeLists.txt  package.xml
src/motor_controller/include/: MotorManager.h
src/motor_controller/include/motor_controller/: MotorController.h
src/motor_controller/src/: MotorManager.cpp  motor_controller.cpp
src/nemo_gazebo/: package.xml  setup.cfg  setup.py
src/prairie2-venv/: pyvenv.cfg
src/prairie_control/: package.xml  setup.cfg  setup.py
src/prairie_control/config/: joint_list.yaml
src/prairie_control/helpers/: bmi_common.py  contact_force_solver.py  helper_functions.py  helpers.py  imu_wrapper.py  lstm.py  policy_network.py  simple_ankle_stabilizer.py  simple_stabilizer.py  stabilizer.py  transformer.py  transformer_policy.py  ts_networks.py  utils.py  xbox.py
src/prairie_control/launch/: config_keyboard.launch.py  default_rviz.launch.py  gz_link_motor.launch.py  master_gzlink.launch.py  master_real.launch.py  (+3 more)
src/unitree_motor_control/: CMakeLists.txt  package.xml
(+52 files in other folders)
